# YSDA-mllm

./: .gitignore  attention_visualization.py  run.py  seq2seq.py  vocab.py
HW1/: attention_visualization.py  build.sh  seq2seq.py  setup 2.sh  training.py  vocab.py
HW2/: answers.json  config.py  data_ingestion.py  embedding.py  generation.py  preprocessing.py  pyproject.toml  vector_db.py
HW3/: template.ipynb
HW4/: pyproject.toml
