[project]
name = "hw4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "gdino>=0.0.1.dev0",
    "gdown>=6.0.0",
    "gradio>=6.14.0",
    "h5py>=3.16.0",
    "httpx>=0.28.1",
    "imageio>=2.37.3",
    "imagesize>=2.0.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "kornia>=0.8.2",
    "matplotlib>=3.10.9",
    "mmcv>=2.2.0",
    "mmdet>=3.3.0",
    "mmengine>=0.10.7",
    "ninja>=1.13.0",
    "nltk>=3.9.4",
    "numpy==1.24.4",
    "open3d>=0.19.0",
    "openai>=2.36.0",
    "opencv-python==4.8.0.74",
    "opencv-python-headless==4.9.0.80",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "plyfile>=1.1.3",
    "pydegensac>=0.2.2",
    "pytest>=9.0.3",
    "pytorch3d",
    "requests>=2.28.1",
    "segment-anything>=1.0",
    "setuptools==69.5.1",
    "sphinx-rtd-theme>=3.1.0",
    "supervision>=0.28.0",
    "torch==2.0.1",
    "torchaudio==2.0.2",
    "torchvision==0.15.2",
    "tqdm>=4.66.5",
    "transformers==4.41.2",
    "ultralytics>=8.4.48",
    "wheel>=0.47.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu117"

[tool.uv.sources]
pytorch3d = { url = "https://dl.fbaipublicfiles.com/pytorch3d/packaging/wheels/py310_cu117_pyt201/pytorch3d-0.7.4-cp310-cp310-linux_x86_64.whl" }
